--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "reload":"./node_modules/pm2/bin/pm2 update"
+    "reload":"./node_modules/pm2/bin/pm2 update",
+    "logs:all":"./node_modules/pm2/bin/pm2 log"
   },
   "dependencies": {
     "date-fns": "^2.30.0",
